# CFT-test-work

./: .env  Dockerfile  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: c9b6b48a2e38_initial.py
src/: config.py  database.py  main.py  strart_up.py
src/salary_app/: deps.py  models.py  schemas.py  utils.py
